jenkinslearn/codepkg/objects/SunSky_Test_Case__c.object
<CustomObject>
    <description>Test Cases reference testing steps and results for particular requirements (may or may not include multiple build components).</description>
    <fields>
        <fullName>SunSky_Requirement_Test_Case__c</fullName>
        <description>The requirement the test case is related to.</description>
        <label>SunSky Requirement Test Case</label>
        <referenceTo>SunSky_Requirement__c</referenceTo>
        <relationshipName>SunSky_Test_Cases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Test_Case_Detail_Steps__c</fullName>
        <description>The steps to complete the test case in the order to execute them.</description>
        <label>Test Case Detail Steps</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Case_Expected_Result__c</fullName>
        <description>The expected results when the test case is executed.</description>
        <label>Test Case Expected Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Test_Case_Functional_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary contact to respond to questions about executing the test case.</description>
        <label>Test Case Functional Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>SunSky_Test_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Case_Profile_Used__c</fullName>
        <description>Profile used to complete the steps of the test case.</description>
        <label>Test Case Profile Used</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Test_Case_Received_Result__c</fullName>
        <description>The results of the executed test case.</description>
        <label>Test Case Received Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Test_Case_Status__c</fullName>
        <description>Track the outcome of the test case.</description>
        <label>Test Case Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                    <default>true</default>
                    <label>Success</label>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
                <value>
                    <fullName>Re-Test</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Case_Summary__c</fullName>
        <description>Describe the test case and its purpose.</description>
        <label>Test Case Summary</label>
        <type>TextArea</type>
    </fields>
    <label>Tool Test Case</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Test_Case_Summary__c</columns>
        <columns>Test_Case_Status__c</columns>
        <columns>Test_Case_Profile_Used__c</columns>
        <columns>Test_Case_Expected_Result__c</columns>
        <columns>Test_Case_Received_Result__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TCASE-{000000}</displayFormat>
        <label>SunSky Test Case Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tool Test Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>